--- a/.render.yaml
+++ b/.render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
     name: bytesource
-    env: python
+    runtime: python
     buildCommand: |
       pip install -r requirements.txt
       python manage.py collectstatic --noinput
     startCommand: gunicorn online_test.wsgi
-    staticPublishPath: staticfiles
